--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -217,7 +217,7 @@
         <div id="uploadnewmetadata">
             <div>
                 <!-- The data encoding type, enctype, MUST be specified as below -->
-                <form enctype="multipart/form-data" action="/upload-new-metadata-file" method="POST">
+                <form enctype="multipart/form-data" action="{{ path('pelagos_app_ui_mdapp_uploadmetadatafile') }}" method="POST">
                     <!-- MAX_FILE_SIZE must precede the file input field -->
                     <input type="hidden" name="MAX_FILE_SIZE" value="1000000" />
                     <!-- Name of input element determines name in $_FILES array -->
