Set width on all entity form for input fields to 100%.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/entity.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/entity.css
@@ -46,8 +46,8 @@ select, input{
    height: 20px;
 }
 
-#orgdetails .entityForm input[type="text"],
-#orgdetails .entityForm textarea {
+.entityForm input[type="text"],
+.entityForm textarea {
     width:100%;
 }
 
