Added "continue" link on upload page.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
@@ -80,5 +80,6 @@
             <li> Geometry Status: {% if isoValid == true %}Verified by PostGIS as OK{% else %}Geometry not valid per PostGIS.{% endif %} </li>
             {% endif %}
         </ul>
+        <a href="{{ path('pelagos_app_ui_mdapp_default') }}">Continue</a>
     </p>
 {% endblock %}
