--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/FundingOrganizations.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/FundingOrganizations.html.twig
@@ -43,6 +43,7 @@
 
 {%
 set properties = [
+    'sortOrder',
     'name',
     'emailAddress',
     'description',
@@ -78,6 +79,7 @@ set properties = [
         "cache": true
     }'
     data-columns = '[
+        { "data": "sortOrder" },
         { "data": "name" },
         { "data": "emailAddress" },
         { "data": "description" },
@@ -93,14 +95,15 @@ set properties = [
         { "data": "modificationTimeStamp" },
         { "data": "modifier" }
     ]'
-    data-order = '[[ 0, "asc" ]]'
-    creatorColumn = "11"
-    modifierColumn = "13"
-    creationTimeStampColumn = "10"
-    modificationTimeStampColumn = "12"
+    data-order = '[[ 1, "asc" ]]'
+    creatorColumn = "12"
+    modifierColumn = "14"
+    creationTimeStampColumn = "11"
+    modificationTimeStampColumn = "13"
 >
     <thead>
         <tr>
+            <th>Sort</th>
             <th>Funding Org Name</th>
             <th>Email</th>
             <th>Description</th>
