Display a message and don't load DIF if it is unsubmitted.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -70,7 +70,12 @@
 
 
 {% block body %}
-{% if found and udi != '' %}
+{% if found and dif.status != constant('Pelagos\\Entity\\DIF::STATUS_APPROVED') %}
+    <div class="messages warning">
+        <h2 class="element-invisible">Status message</h2>
+        The DIF has not yet been submitted for dataset: {{ udi }}
+    </div>
+{% elseif found and udi != '' %}
 
     <div class="messages status">
         <h2 class="element-invisible">Status message</h2>
