--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/data-managers.account-created.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/data-managers.account-created.email.twig
@@ -6,7 +6,7 @@
     This email is being sent to notify you that {{account.person.FirstName}} {{account.person.LastName}} has completed
     the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC)
     account creation process. {{account.person.FirstName}} {{account.person.LastName}} is a member of
-    {{ accoutn.person.ResearchGroupNames | join(', ') }}.<br />
+    {{ account.person.ResearchGroupNames | join(', ') }}.<br />
     <br>
     Thank you,<br>
     <br>
@@ -21,7 +21,7 @@
 This email is being sent to notify you that {{account.person.FirstName}} {{account.person.LastName}} has completed
 the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC)
 account creation process. {{account.person.FirstName}} {{account.person.LastName}} is a member of
-{{ accoutn.person.ResearchGroupNames | join(', ') }}.
+{{ account.person.ResearchGroupNames | join(', ') }}.
 
 
 Thank you,
