Retreived geometry as WKT from DIF to show on Dataland. Also fixed minor DOI issue, if DOI is not set or does not exist.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -48,7 +48,7 @@
 
 
 <table width="90%" datasetId="{{ dataset.id }}">
-    {% if dataset.datasetSubmission.doi %}
+    {% if dataset.datasetSubmission.doi|default %}
         <tr><td colspan="2"><b>DOI:</b><br/> {{dataset.datasetSubmission.doi}}</td></tr>
         <tr><td colspan="2">&nbsp;</td></tr>
     {% endif %}
