--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
@@ -53,7 +53,7 @@
                 <td width="40%">
 
                     <div id="dlolmap" style="width: 640px;height: 480px;"
-                        wkt="{{dataset.metadata.geometry|default}}"
+                        wkt="{{wkt|default}}"
                         description="{{dataset.metadata.extentDescription|default}}"
                     {% image '@PelagosAppBundle/Resources/public/images/labonly.png' %}
                         labimage="{{asset_url}}"/>
