--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -89,7 +89,11 @@
                 {% set registered_icon = red_icon %}
             {% endif %}
 
-            {% if dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
+            {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
+                {% set metadata_na = metadata_na + 1 %}
+                {% set metadata_title = "This dataset has not yet been registered." %}
+                {% set metadata_icon = na_icon %}
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
                 {% set metadata_red = metadata_red + 1 %}
                 {% set metadata_title = "This dataset has been registered, but no metadata has been submitted." %}
                 {% set metadata_icon = red_icon %}
@@ -107,7 +111,7 @@
                 {% set metadata_icon = yellow_icon %}
             {% endif %}
 
-            {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
+            {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
                 {% set available_na = available_na + 1 %}
                 {% set available_title = "This dataset has not yet been registered." %}
                 {% set available_icon = na_icon %}
