--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -91,7 +91,7 @@
 
             {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set metadata_na = metadata_na + 1 %}
-                {% set metadata_title = "This dataset has not yet been registered." %}
+                {% set metadata_title = "This dataset has not yet been registered, therefore no metadata is available." %}
                 {% set metadata_icon = na_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
                 {% set metadata_red = metadata_red + 1 %}
@@ -99,7 +99,7 @@
                 {% set metadata_icon = red_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_SUBMITTED') %}
                 {% set metadata_yellow = metadata_yellow + 1 %}
-                {% set metadata_title = "Metadata for this dataset has been submitted for review." %}
+                {% set metadata_title = "Metadata for this dataset has been submitted and is in review." %}
                 {% set metadata_icon = yellow_icon %}
             {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_ACCEPTED') %}
                 {% set metadata_green = metadata_green + 1 %}
@@ -113,7 +113,7 @@
 
             {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set available_na = available_na + 1 %}
-                {% set available_title = "This dataset has not yet been registered." %}
+                {% set available_title = "This dataset has not yet been registered, therefore it is not yet available." %}
                 {% set available_icon = na_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_NOT_AVAILABLE') %}
                 {% set available_red = available_red + 1 %}
