Matched restrictions dialog behavior to PROD.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
@@ -162,6 +162,14 @@ span.attr {
     vertical-align: middle;
 }
 
+#downloaddsdenrestricted {
+    vertical-align: middle;
+}
+
+#downloaddsdenapproval {
+    vertical-align: middle;
+}
+
 #tabs li.ui-state-disabled {
     opacity: .5;
 }
