--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -119,6 +119,10 @@
                 {% set available_red = available_red + 1 %}
                 {% set available_title = "This dataset has been registered, but the data is not yet available." %}
                 {% set available_icon = red_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PENDING_METADATA_SUBMISSION') %}
+                {% set available_yellow = available_yellow + 1 %}
+                {% set available_title = "This dataset does not yet have approved metadata, therefore is not available for download." %}
+                {% set available_icon = yellow_icon %}
             {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PENDING_METADATA_APPROVAL') %}
                 {% set available_yellow = available_yellow + 1 %}
                 {% set available_title = "This dataset does not yet have approved metadata, therefore is not available for download." %}
