--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
@@ -26,7 +26,8 @@
         add_js(
             [
                 '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js',
-                '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js'
+                '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
+                '//cdn.datatables.net/plug-ins/1.10.12/sorting/chinese-string.js'
             ]
         )
     }}
@@ -88,6 +89,9 @@ set properties = [
         {
             "targets": [ 4, 5, 6, 7 ],
             "searchable": false
+        },
+        {
+            "type": "chinese-string", targets: [1, 2]
         }
     ]'
     creatorColumn = "5"
