Used griidcTime twig filter.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -64,7 +64,7 @@
         <td><b>UDI:</b><br/><span id="udi">{{dataset.udi}}</span></td>
         <td>
             <b>Last Update:</b><br>
-            {{dataset.modificationTimeStamp|date('c')}}<br>
+            {{ dataset.modificationTimeStamp|griidcTime }}<br>
         </td>
     </tr>
 
