--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -64,12 +64,7 @@
         <td><b>UDI:</b><br/><span id="udi">{{dataset.udi}}</span></td>
         <td>
             <b>Last Update:</b><br>
-            {{ dataset.modificationTimeStamp|date('M d, Y H:m:s', 'America/Chicago') }}
-            {% if dataset.modificationTimeStamp|date('Z', 'America/Chicago')/3600 == -5 %}
-                CDT
-            {% else %}
-                CST
-            {% endif %}<br />
+            {{ dataset.modificationTimeStamp|date('M d, Y H:m:s T', 'America/Chicago') }}<br />
         </td>
     </tr>
 
