--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
@@ -13,7 +13,11 @@
 {% if dataset.metadata.themeKeywords|default %}
 <h2>Theme Keywords:</h2>
 <div>
-    {{dataset.metadata.themeKeywords|join(', ')}}
+    {% set keywords = [] %}
+    {% for keyword in dataset.metadata.themeKeywords %}
+        {% set keywords = keywords|merge([keyword|trim('"')]) %}
+    {% endfor %}
+    {{keywords|join(', ')}}
 </div>
 {% endif %}
 
