--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-monitoring.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-monitoring.css
@@ -27,3 +27,17 @@
     top: 50%;
     margin-top: -30px;
 }
+
+.display-table {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+.display-table-row {
+    display: table-row;
+}
+
+.display-table-cell {
+    display: table-cell;
+}
