--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -52,6 +52,9 @@
 
 
 {% block body %}
+
+<h1>Dataset Information Form (DIF)</h1>
+
 <table width="100%" height="100%">
     <tr>
     <td style="vertical-align: top; width:60%" >
