--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -32,50 +32,63 @@
 {% endblock %}
 
 {% block body %}
-    <div id="container">
-        <div id="left">
-            <div id="menu">
-                <div class="viewport">
-                    <div class="overview">
-                        <script type="text/javascript">
-                            var tree = {
-                                        theme: "classic",
-                                        max_depth: 2,
-                                        expand_to_depth: 0,
-                                        animation: 250,
-                                        type: "ra",
 
-                                        rfp_color: "#00A",
-                                        rfp_action: "updateHash(\{\{fundSrc.id\}\});showProjects('fundSrc',\{\{fundSrc.id\}\});",
+    <div class="display-table">
 
-                                        project_color: "#00A",
-                                        project_action: "updateHash(\{\{project.fundingCycle.id\}\},\{\{project.id\}\});showProjects('projectId',\{\{project.id\}\});",
-
-                                        researcher_color: "#00A",
-                                        researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
-
-                                        afteropen: "$(window).hashchange();"
-                                       }
-
-                            insertTree(tree);
-                        </script>
-                    </div>
-                </div>
+        <div class="display-table-row">
+            <div class="display-table-cell">
+                <h1>Dataset Monitoring</h1>
             </div>
         </div>
-        <div id="right">
-            <div id="content">
-                <div class="viewport">
-                    <div class="overview"></div>
-                    <div class="spinner">
-                        <div>
-                            {% image '@PelagosAppBundle/Resources/public/images/spinner.gif' %}
-                                <img src="{{ asset_url }}">
-                            {% endimage %}
+
+        <div class="display-table-row">
+            <div id="container" class="display-table-cell">
+                <div id="left">
+                    <div id="menu">
+                        <div class="viewport">
+                            <div class="overview">
+                                <script type="text/javascript">
+                                    var tree = {
+                                                theme: "classic",
+                                                max_depth: 2,
+                                                expand_to_depth: 0,
+                                                animation: 250,
+                                                type: "ra",
+
+                                                rfp_color: "#00A",
+                                                rfp_action: "updateHash(\{\{fundSrc.id\}\});showProjects('fundSrc',\{\{fundSrc.id\}\});",
+
+                                                project_color: "#00A",
+                                                project_action: "updateHash(\{\{project.fundingCycle.id\}\},\{\{project.id\}\});showProjects('projectId',\{\{project.id\}\});",
+
+                                                researcher_color: "#00A",
+                                                researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
+
+                                                afteropen: "$(window).hashchange();"
+                                               }
+
+                                    insertTree(tree);
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="right">
+                    <div id="content">
+                        <div class="viewport">
+                            <div class="overview"></div>
+                            <div class="spinner">
+                                <div>
+                                    {% image '@PelagosAppBundle/Resources/public/images/spinner.gif' %}
+                                        <img src="{{ asset_url }}">
+                                    {% endimage %}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 {% endblock %}
