--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
@@ -74,8 +74,8 @@ set properties = [
     }'
     data-columns = '[
         { "data": "id" },
-        { "data": "firstName" },
-        { "data": "lastName" },
+        { "data": "firstName", "type": "chinese-string" },
+        { "data": "lastName", "type": "chinese-string" },
         { "data": "emailAddress" },
         { "data": "creationTimeStamp" },
         { "data": "creator" },
@@ -90,9 +90,7 @@ set properties = [
             "targets": [ 4, 5, 6, 7 ],
             "searchable": false
         },
-        {
-            "type": "chinese-string", targets: [1, 2]
-        }
+        { "type": "chinese-string", targets: [ 1, 2 ] }
     ]'
     creatorColumn = "5"
     modifierColumn = "7"
